--- a/notes.css
+++ b/notes.css
@@ -7,7 +7,7 @@
     width: 100px;
     height: 40px;
 }
-.newsNote{
+.newNote{
     position: relative;
     width: 350px;
     height: 400px;
@@ -48,4 +48,7 @@ form{
 }
 button{
     width: 100px;
+}
+.hide{
+    display: none;
 }
